# ai-model

./: .gitignore  .releaserc  404.html  AGENT.md  APPLICATION_ARCHITECTURE.md  ARCHITECTURE_CONSTITUTION.md  AUDIT_RIR-RI_FIXES.md  BENCHMARK_STANDARD.md  BUILDING.md  CHANGELOG.md  CODE_CHANGES_AND_DEPLOYMENT.md  CODING_STANDARDS.md  DELIVERY_PACKAGE.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_STANDARD.md  Dockerfile  HEALTH_CHECK_ENDPOINT.py  HSCI_Architecture_Prompt.md  HSCI_Complete_Master_Document.md  HSCI_RESEARCH_PAPER.md  HUMAN_LIKE_COGNITION.md  IMPLEMENTATION_WORKFLOW.md  PROJECT_RULES.md  PROJECT_STRUCTURE_VALIDATION.md  PYTHON_PROJECT_SETUP_GUIDE.md  QUICK_START_VERIFICATION.md  README.md  RENDER_DEPLOYMENT_COMPLETE_GUIDE.md  SELF_TEACHING_ARCHITECTURE.md  SYSTEM_ARCHITECTURE_VALIDATION.md  SYSTEM_VS_APPLICATION.md  TESTING_STANDARD.md  VALIDATION_SUMMARY.md  VERIFICATION_CHECKLIST.md  brain_api.py  brain_inspector.py  cognitive_weights.json  debug_rir.py  debug_universal.py  demo_code_gen.py  (+48 more)
.github/: copilot-instructions.md
HSCI_TECHNICAL_SPEC/: index.html
adr/: index.html
api/: index.html
architecture/: index.html
benchmarks/: REAL_BENCHMARKS_DOCS.md  benchmark_review.md  benchmark_validation_report.md  generate_100_tasks.py  generate_real_tasks.py  generate_v2_tasks.py  run_benchmarks.py
design/: index.html
doc/: ENGINEERING_RISK_REPORT.md  HSCI_V4_ARCHITECTURE_READINESS_REPORT.md  HSCI_V4_KNOWLEDGE_ARCHITECTURE.md  HSCI_V4_LEARNING_ARCHITECTURE.md  HSCI_V4_THINKING_ALGORITHMS.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_PHASES.md  README.md  (+1 more)
(+356 files in other folders)
