[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hsci"
version = "0.1.0-alpha"
description = "Hyper-Symbolic Cognitive Invention - A Self-Verifying Cognitive Architecture"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "HSCI Team" }
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.7.0",
    "z3-solver>=4.12.2.0",
    "requests>=2.31.0",
    "sympy>=1.12",
    "scikit-learn>=1.3.0",
    "numpy>=1.26.0",
    "torch>=2.0.0",
    "torch-geometric>=2.3.0",
    "rich>=13.0.0",
]

[project.scripts]
hsci-cli = "hsci_cli:main"
hsci-app = "run_app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["hnsds*", "hsci*"]
